--- a/CSS/Glass.css
+++ b/CSS/Glass.css
@@ -3,13 +3,13 @@ div {
 }
 
 h1 {
-	font-size: 50px;
+	font-size: 3.125rem;
 	color: black;
-	margin-top: 150px;
-	margin-bottom: 150px;
+	margin-top: 9.375rem;
+	margin-bottom: 9.375rem;
 }
 h2 {
-	font-size: 30px;
+	font-size: 1.875rem;
 	color: black;
 }
 
@@ -17,7 +17,7 @@ button {
 	transition-duration: 0.4s;
 
 	background-color: rgba(220, 220, 220, 0);
-	border: 3px solid rgba(255, 255, 255, 0);
+	border: 0.1875rem solid rgba(255, 255, 255, 0);
 
 	display: block;
 	/*竖排buttons*/
@@ -25,9 +25,9 @@ button {
 	/*水平居中*/
 
 	color: black;
-	font-size: 16px;
-	height: 50px;
-	width: 500px;
+	font-size: 1rem;
+	height: 3.125rem;
+	width: 31.25rem;
 	text-align: center;
 	outline: none;
 	/* border-bottom: none; */
@@ -39,13 +39,13 @@ hr {
 	width: 90%;
 	margin: 0 auto;
 	border: 0;
-	height: 2px;
+	height: 0.125rem;
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
 }
 
 button:hover {
 	background-color: rgba(236, 236, 236, 0.0);
-	border: 2px solid rgba(0, 0, 0, 0.5);
+	border:0.125rem solid rgba(0, 0, 0, 0.5);
 }
 
 button#btn0 {
@@ -62,8 +62,8 @@ button#btn2 {
 
 p {
 	text-align: left;
-	font-size: 18px;
-	text-indent: 2em;
+	font-size: 1.125rem;
+	text-indent: 2rem;
 	
 	margin-left: 10%;
 	margin-right: 10%;
