--- a/CSS/Glass.css
+++ b/CSS/Glass.css
@@ -26,8 +26,8 @@ button {
 
 	color: black;
 	font-size: 1rem;
-	height: 3.125rem;
-	width: 31.25rem;
+	margin-left: 10%;
+	margin-right: 10%;
 	text-align: center;
 	outline: none;
 	/* border-bottom: none; */
