--- a/CSS/Glass.css
+++ b/CSS/Glass.css
@@ -8,33 +8,34 @@ h1 {
 	margin-top: 9.375rem;
 	margin-bottom: 9.375rem;
 }
+
 h2 {
 	font-size: 1.875rem;
 	color: black;
 }
-
+div#ChooseBtns{
+	align-items: center;
+}
 button {
+	/*过渡*/
 	transition-duration: 0.4s;
 
-	background-color: rgba(220, 220, 220, 0);
-	border: 0.1875rem solid rgba(255, 255, 255, 0);
-
 	display: block;
-	/*竖排buttons*/
-	margin-top: 0.3125rem;
-	margin-bottom: 0.3125rem;
-	margin-left: auto;
-	/* margin: 0.3125rem auto; */
 	/*水平居中*/
-
-	color: black;
-	font-size: 1rem;
+	margin: 0.3125rem auto;
+	
+	/* 背景框 */
+	background-color: rgba(220, 220, 220, 0);
 	height: 3.125rem;
 	width: 50%;
-	text-align: center;
+	border: 0.1875rem solid rgba(255, 255, 255, 0);
 	outline: none;
-	/* border-bottom: none; */
 
+	/* 文本 */
+	color: black;
+	font-size: 1rem;
+	text-align: center;
+	/* border-bottom: none; */
 }
 
 hr {
@@ -45,9 +46,13 @@ hr {
 	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
 }
 
+button:active {
+	border: 0.1875rem solid rgba(255, 255, 255, 0);
+}
+
 button:hover {
 	background-color: rgba(236, 236, 236, 0.0);
-	border:0.125rem solid rgba(0, 0, 0, 0.5);
+	border: 0.125rem solid rgba(0, 0, 0, 0.5);
 }
 
 button#btn0 {
@@ -66,7 +71,7 @@ p {
 	text-align: left;
 	font-size: 1.125rem;
 	text-indent: 2rem;
-	
+
 	margin-left: 10%;
 	margin-right: 10%;
 }
